--- a/app/build.gradle
+++ b/app/build.gradle
@@ -99,6 +99,14 @@ dependencies {
     kapt 'com.google.dagger:hilt-android-compiler:2.28.3-alpha'
     kapt "androidx.hilt:hilt-compiler:1.0.0-alpha02"
 
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+
+    //Fresco
+    implementation 'com.facebook.fresco:fresco:2.3.0'
+
+
 
 
 
