--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation "com.google.android.material:material:1.2.0"
+    implementation 'androidx.annotation:annotation:1.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
@@ -106,8 +107,12 @@ dependencies {
     //Fresco
     implementation 'com.facebook.fresco:fresco:2.3.0'
 
+    //Firebase Auth
+    implementation 'com.firebaseui:firebase-ui-auth:5.0.0'
+
 
 
 
 
 }
+apply plugin: 'com.google.gms.google-services'
