Profile Firebase Features

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,13 +22,8 @@
         <activity
             android:name=".ui.view.activities.login.ui.login.LoginActivity"
             android:label="@string/title_activity_login">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
-        <activity android:name=".ui.view.activities.MainActivity"></activity>
+        <activity android:name=".ui.view.activities.MainActivity"/>
     </application>
 
 </manifest>
